--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "codequestapi",
-  "version": "1.0.0",
-  "description": "This is a REST API to get programming questions",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "mongoose": "^8.7.2"
-  }
+	"name": "codequestapi",
+	"version": "1.0.0",
+	"description": "This is a REST API to get programming questions",
+	"main": "app.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^16.4.5",
+		"express": "^4.21.1",
+		"mongoose": "^8.7.2",
+		"nodemon": "^3.1.7"
+	}
 }
