--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "This is a REST API to get programming questions",
 	"main": "app.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"dev": "nodemon"
 	},
 	"keywords": [],
@@ -15,5 +15,8 @@
 		"express": "^4.21.1",
 		"mongoose": "^8.7.2",
 		"nodemon": "^3.1.7"
+	},
+	"devDependencies": {
+		"jest": "^29.7.0"
 	}
 }
