preparacion de la feature generacion excel tipo test

--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
 	"license": "ISC",
 	"dependencies": {
 		"dotenv": "^16.4.5",
+		"ejs": "^3.1.10",
 		"express": "^4.21.1",
 		"mongoose": "^8.7.2",
-    "ejs": "^3.1.10"
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
-    "nodemon": "^3.1.7",
-		"jest": "^29.7.0"
+		"jest": "^29.7.0",
+		"nodemon": "^3.1.7"
 	}
 }
