prueba modulo xlsx

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"ejs": "^3.1.10",
 		"express": "^4.21.1",
 		"mongoose": "^8.7.2",
+		"path": "^0.12.7",
 		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
