--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@google/generative-ai": "^0.21.0",
 		"dotenv": "^16.4.5",
-		"express": "^4.21.1",
-		"mongoose": "^8.7.2",
-    "ejs": "^3.1.10"
+		"ejs": "^3.1.10",
+		"express": "^4.21.1"
 	},
 	"devDependencies": {
-    "nodemon": "^3.1.7",
-		"jest": "^29.7.0"
+		"jest": "^29.7.0",
+		"nodemon": "^3.1.7"
 	}
 }
